# SimpleUtf

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
include/: CMakeLists.txt
include/SimpleUtf/: Exceptions.hpp  Utf.hpp  Utf16.hpp  Utf32.hpp  Utf8.hpp  UtfCommon.hpp
test/: CMakeLists.txt  GenCodePtToUtf16Map.py  GenCodePtToUtf8Map.py
test/src/: Main.cpp  TestUtf.cpp
